appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkToProfile.yml

- scrollUntilVisible:
    element:
      text: 'Notifications et thèmes suivis'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Notifications et thèmes suivis'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Notifications et thèmes suivis'

- assertVisible:
    id: 'Autoriser les notifications - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Autoriser les notifications - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Suivre tous les thèmes - Interrupteur à bascule - non coché'
    enabled: false

- runFlow: ../common/lifecycle/StopApp.yml
