appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- assertVisible: 'Profil'
- copyTextFrom:
    childOf: '.*€'

- evalScript: ${output.amountProfil = maestro.copiedText}
- tapOn:
    text: 'Accueil.*'
    index: 0
- assertVisible: 'Tu as ${output.amountProfil} sur ton pass'

- runFlow: ../common/lifecycle/StopApp.yml
