appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- scrollUntilVisible:
    element: 'Suivre le pass Culture'

- tapOn:
    text: 'Confidentialité'

- assertVisible: 'Paramètres de confidentialité'
- tapOn:
    id: 'Tout accepter - Interrupteur à bascule - coché'
- scroll
- assertVisible: '.*politique de gestion des cookies'
- tapOn: 'Enregistrer mes choix'

- runFlow: ../common/lifecycle/StopApp.yml
