appId: ${MAESTRO_APP_ID}
tags:
  - profile
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
  - runScript:
      file: ../common/helpers/generateUser.js
      env:
        id_provider: 'UBBLE'
        step: 'BENEFICIARY'
        age: 18
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkGeneratedAccount.yml
- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- scrollUntilVisible:
    element:
      text: 'Autres'
- assertVisible: 'Aide'
- tapOn: "Nouvelle fenêtre\_: Chercher une info"

- runFlow: # Si 1ere ouverture de chrome
    when:
      visible: "Utiliser l'appli sans compte"
    commands:
      - tapOn: "Utiliser l'appli sans compte"
      - tapOn: 'Non, merci'
      - pressKey: back

      - runFlow:
          when:
            platform: Android
          commands:
            - pressKey: back

      - runFlow:
          when:
            platform: iOS
          commands:
            - tapOn: 'Revenir à pass Culture S'

- runFlow: ../common/lifecycle/StopApp.yml
