appId: ${MAESTRO_APP_ID}
---
- assertVisible: "Connecte-toi"
- scrollUntilVisible:
    element: "Se connecter"
    direction: DOWN

- tapOn: "Se connecter"
- tapOn: "Se connecter" # Sortir de la saisie
