appId: ${MAESTRO_APP_ID}
---

- tapOn:
    id: "Interrupteur date"
- assertVisible: "Date"
- assertVisible:
    text: "Seules les sorties seront affichées"
    index: 0
- assertVisible: "Aujourd’hui"
- assertVisible: "Cette semaine"
- assertVisible: "Ce week-end"
- assertVisible: "Date précise"
- assertVisible: "Heure"
- assertVisible:
    text: "Seules les sorties seront affichées"
    index: 1