appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Plus tard'
- tapOn: "Rechercher des offres"
- tapOn: 'Offre, artiste, lieu culturel...'
- inputText: ${MAESTRO_PHYSICAL_OFFER}
- pressKey: Enter
- tapOn:
    text: ${MAESTRO_PHYSICAL_OFFER}
    index: 1