appId: ${MAESTRO_APP_ID}
---
- tapOn: "Catégories"
- tapOn: "Réinitialiser"
- tapOn: "Rechercher"
