appId: ${MAESTRO_APP_ID}
tags:
  - search
  - refacto
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkToHome.yml

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml
- runFlow: ../common/navigation/GoToSearchFromTabBar.yml

- assertVisible: 'Rechercher'

- runFlow:
    when:
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn: 'Localisation – Liste - Élément 3 sur 3 - France entière.*'

- tapOn: '.*Cinéma.*'
- tapOn: "Sous-catégorie Films à l'affiche"

- tapOn: 'Voir tous les filtres : 1 filtre actif'
- assertVisible: "Filtre - Catégorie - Films à l'affiche"

- tapOn: '.*Catégorie.*'
- assertVisible: "Films à l'affiche"
- tapOn: 'Réinitialiser'

- tapOn: 'Appliquer le filtre'
- assertVisible: 'Filtre - Catégorie - Toutes les catégories'
- tapOn: 'Rechercher'

- assertVisible: 'Voir tous les filtres'

- runFlow: ../common/lifecycle/StopApp.yml
