appId: ${MAESTRO_APP_ID}
---
- assertVisible: "Bienvenue\_!"
- tapOn: "Débloque tes 300\_€"

- assertVisible: "C'est très rapide\_!"
- tapOn: 'Numéro de téléphone'

- assertVisible: 'Quelques conseils'
- tapOn: 'J’ai compris'

- assertVisible: "Quel est ton numéro de téléphone\_?"
- tapOn:
    id: 'Entrée pour le numéro de téléphone'
- inputText: '07' # Phone number prefix
- inputRandomNumber:
    length: 8
- tapOn: 'Continuer'

- assertVisible: 'Valide ton numéro de téléphone'
- tapOn:
    id: 'Entrée pour le code reçu par sms'
- inputRandomNumber:
    length: 6
- tapOn: 'Continuer'

- assertVisible: "C'est très rapide\_!"
- tapOn: 'Profil - non complété'
