appId: ${MAESTRO_APP_ID}
---
- waitForAnimationToEnd

- assertVisible:
    id: 'tagsContainer'

- swipe:
    from:
      id: 'tagsContainer'
    direction: UP

- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element: "Envoyer par\nSMS"
      - assertVisible: "Envoyer par\nSMS"

- runFlow:
    when:
      platform: iOS
    commands:
      - scrollUntilVisible:
          element: 'Envoyer sur iMessage'
      - assertVisible: 'Envoyer sur iMessage'

- assertVisible:
    text: 'Voir l’itinéraire'
    optional: true

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Réserver l’offre'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.button.ios.booking}
- assertVisible: 'Identifie-toi pour découvrir tout ce que la culture a en réserve pour toi.'

- waitForAnimationToEnd
