appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'
- tapOn: 'Se connecter avec Google'
- assertVisible: 'Connexion'

- tapOn: # Sélection du 1er compte disponible dans la modale
    id: 'com.google.android.gms:id/container'
    index: 0

- runFlow:
    when:
      visible: 'Termine ton inscription'
    commands:
      - swipe: # Sélection du mois précédent pour passer à l'écran suivant
          from:
            id: 'android:id/numberpicker_input'
            index: 1
          start: 47%, 61%
          end: 47%, 68%
      - tapOn: 'Continuer vers l’étape CGU & Données'
      - tapOn:
          id: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
      - tapOn:
          id: 'J’ai lu les chartes des données personnelles - obligatoire'
      - tapOn: 'Accepter les conditions générales d’utilisation et la politique de confidentialité pour s’inscrire'
      - tapOn: 'Vérifier mon identité plus tard'
