appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element:
      text: ${output.wording.auth.logout.footer}
- tapOn: ${output.wording.auth.logout.button}

- assertVisible: ${output.wording.common.createAccount}