appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- runFlow: ../../subFolder/cloud/commands/SetEverywhere.yml
- swipe:
    from:
      text: 'Les artistes'
    direction: UP
- extractTextWithAI:
    query: "Le titre exacte d'une des offres Cinéma visible dans les résultats de recherche dont le titre n'est pas cropé."
    outputVariable: 'offerResult'
- tapOn: .*${offerResult}.*

- waitForAnimationToEnd

- repeat:
    while:
      notVisible: 'Accéder aux séances'
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: 'Séance de cinéma'
          index: 1
      - waitForAnimationToEnd
- runFlow:
    when:
      visible: 'Accéder aux séances'
    commands:
      - tapOn: 'Accéder aux séances'
      - assertVisible: 'Trouve ta séance'
      - runFlow: ../../subFolder/booking/DaySelectionCinema.yml

- extractTextWithAI:
    query: 'La 1ère séance de cinéma disponible (horaire) visible sur la page de sélection de la séance'
    outputVariable: 'movieSession'

- tapOn:
    text: '.*${movieSession}.*'
    label: 'Sélection de la séance'

- runFlow:
    when:
      visible: 'Prix'
    commands:
      - tapOn:
          label: 'Sélection du 1er prix disponible'
          below:
            text: 'Prix'
      - tapOn: 'Valider le prix'

- assertVisible: 'Nombre de places'
- tapOn: 'Nombre de places - Liste - Élément 1 sur 2 - Solo.*'
- tapOn: 'Finaliser ma réservation'

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
- scrollUntilVisible:
    element: '.*Confirmer la réservation.*'
- doubleTapOn: '.*Confirmer la réservation.*'

- assertVisible: 
    text: "Réservation confirmée\_!"
    optional: true
- tapOn:
    text: 'Voir ma réservation'
    retryTapIfNoChange: true

- scroll
- scroll
- runFlow:
    when:
      visible: 'Annuler ma réservation'
    commands:
      - tapOn: 'Annuler ma réservation'
      - tapOn: 
          id: 'Annuler ma réservation'

- waitForAnimationToEnd
