appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- runFlow:
    when:
      visible: 'Les lieux culturels'
    commands:
    - swipe:
        from:
          text: "Les lieux culturels"
        direction: UP

- runFlow:
    when:
      visible: 'Les offres'
    commands:
    - swipe:
        from:
          text: "Les offres"
        direction: UP

- tapOn: "Abonnement presse en ligne"

- runFlow:
    when:
      visible: "Réserver l’offre"
    commands:
    - tapOn: "Réserver l’offre"

- runFlow:
    when:
      visible: 'Accéder à l’offre en ligne'
    commands:
    - assertVisible: 'Accéder à l’offre en ligne'
    
- runFlow:
    when:
      visible: "Tu y es presque"
    commands:
    - assertVisible: "Tu y es presque"