appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- swipe:
    from:
      text: 'Les artistes'
    direction: UP
- extractTextWithAI:
    query: "Le titre exacte d'une des offres Cinéma visible dans les résultats de recherche"
    outputVariable: 'offerResult'
- evalScript: '${console.log(offerResult)}'
- tapOn: .*${offerResult}.*

- waitForAnimationToEnd: # TODO:(PC-36170) améliorer les perfs de la page offre (cinéma)
    timeout: 5000

- repeat:
    while:
      notVisible: 'Accéder aux séances'
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: 'Séance de cinéma'
          index: 1
      - waitForAnimationToEnd: # TODO:(PC-36170) améliorer les perfs de la page offre (cinéma)
          timeout: 5000

- runFlow:
    when:
      visible: 'Accéder aux séances'
    commands:
      - tapOn: 'Accéder aux séances'
      - assertVisible: 'Trouve ta séance'
      - runFlow: ../../subFolder/booking/DaySelectionCinema.yml

- extractTextWithAI:
    query: 'La 1ère séance de cinéma disponible (horaire) visible sur la page de sélection de la séance'
    outputVariable: 'movieSession'

- tapOn:
    text: '.*${movieSession}.*'
    label: 'Sélection de la séance'

- runFlow:
    when:
      visible: 'Prix'
    commands:
      - tapOn:
          label: 'Sélection du 1er prix disponible'
          below:
            text: 'Prix'
      - tapOn: 'Valider le prix'

- assertVisible: 'Nombre de places'
- tapOn: '.*Nombre de places - Liste - Élément 2 sur 2 - Duo.*'
- tapOn: 'Finaliser ma réservation'

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
- scrollUntilVisible:
    element: '.*Confirmer la réservation.*'
- doubleTapOn: '.*Confirmer la réservation.*'

- assertVisible: "Réservation confirmée\_!"
- tapOn:
    text: 'Voir ma réservation'
    retryTapIfNoChange: true

- scroll
- scroll
- runFlow:
    when:
      visible: 'Annuler ma réservation'
    commands:
      - tapOn: 'Annuler ma réservation'
      - tapOn: 'Annuler ma réservation'

- waitForAnimationToEnd