appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- runFlow:
    when:
      platform: Android
    commands:
    - tapOn:
        text: 'Livre'
        index: 0

- runFlow:
    when:
      platform: iOS
    commands:
    - scroll
    - extractTextWithAI:
        query: "Le titre exacte d'une des offres Livre visible dans les résultats de recherche"
        outputVariable: 'offerResult'
    - tapOn: .*${offerResult}.*

- waitForAnimationToEnd

- runFlow:
    when:
      platform: Android
    commands:
    - tapOn: 'Réserver l’offre'

- runFlow:
    when:
      platform: iOS
    commands:
    - tapOn: ${output.button.ios.booking}

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation - obligatoire'
- runFlow:
    when:
      platform: Android
    commands:
    - scrollUntilVisible:
        element: 'Confirmer la réservation'
- runFlow:
    when:
      platform: iOS
    commands:
    - scroll

- tapOn:
    text: '.*Confirmer la réservation.*'
    retryTapIfNoChange: false

- assertVisible: "Réservation confirmée\_!"
- runFlow:
    when:
      platform: iOS
      visible: 'Plus tard'
    commands:
    - tapOn: 'Plus tard'

- tapOn: 'Voir ma réservation'

- scrollUntilVisible:
    element: 'Annuler ma réservation'
- tapOn: 'Annuler ma réservation'

- runFlow:
    when:
      platform: Android
    commands:
    - tapOn: 'Annuler ma réservation'

- runFlow: # iOS has an accessibility issue with the "Annuler ma réservation" button, so we need to tap on it with coordinates
    when:
      platform: iOS
    commands:
    - tapOn:
        point: 50%,87%
