appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- runFlow:
    when:
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn: 'Localisation – Liste - Élément 3 sur 3 - France entière.*'

- swipe:
    from:
      text: 'Les artistes'
    direction: UP
- tapOn:
    text: 'CD'
    index: 2

- waitForAnimationToEnd

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          id: sticky-booking-button
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: sticky-booking-button

- assertVisible: 'Détails de la réservation'
- assertVisible: 'Informations'
- assertVisible: 'Lieu de retrait'
- assertVisible: 'Conditions d’annulation'
- assertVisible: 'Conditions d’utilisation'
- assertVisible: 'Nos conditions générales d’utilisation'

- tapOn: 'Fermer la modale'
