appId: ${MAESTRO_APP_ID}
---
- repeat:
    while:
      notVisible:
        text: ${output.targetDateTest}
    commands:
      - tapOn: 'Revenir en arrière'
      - scroll
      - extractTextWithAI:
          query: "Le titre exacte d'une des offres Cinéma visible dans les résultats de recherche"
          outputVariable: 'offerResult'
      - tapOn: .*${offerResult}.*
      - tapOn: 'Accéder aux séances'

- runFlow:
    when:
      visible:
        text: ${output.targetDateTest}
    commands:
      - tapOn:
          text: ${output.targetDateTest}