appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'France entière - Ouvrir la modale de localisation'
      - tapOn:
          text: '.*France entière.*'

- runFlow:
    when:
      visible: 'Localisation'
    commands:
      - tapOn:
          text: '.*France entière.*'
