appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible: 'France entière'
    commands:
      - tapOn: 'France entière'
      - tapOn:
          text: '.*Choisir une zone géographique.*'
          point: '50%,25%'
      - tapOn:
          id: 'styled-input-container'
      - inputText: 'Paris'
      - hideKeyboard
      - tapOn: 'Paris Paris'
      - tapOn: 'Valider la localisation'
