appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      platform: Android
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn:
          text: '.*Choisir une zone géographique.*'
          point: '50%,25%'
      - tapOn:
          id: 'styled-input-container'
      - inputText: 'Paris'
      - hideKeyboard
      - tapOn: 'Paris Paris'
      - tapOn: 'Valider la localisation'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'France entière - Ouvrir la modale de localisation'
      - tapOn:
          text: '.*Choisir une zone géographique.*'
          point: '50%,25%'
      - tapOn:
          id: 'styled-input-container'
      - inputText: 'Paris'
      - tapOn: 'Paris Paris'
      - tapOn: 'Valider la localisation'
