appId: ${MAESTRO_APP_ID}
---
- assertNotVisible: 'Mes réservations'
- tapOn: ${output.wording.favorite.tabBar}

- assertVisible: ${output.wording.favorite.unloggedTitle}
- assertVisible:
    id: ${output.wording.common.createAccount}
- assertVisible: ${output.wording.auth.login.button}
