appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: ${output.wording.profil.tabBar.profil}

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.tabBar.profil}

- runFlow:
    when:
      platform: Web
    commands:
      - tapOn: 'Profil'

- waitForAnimationToEnd
