appId: ${MAESTRO_APP_ID}
---
- waitForAnimationToEnd
- tapOn:
    id: 'icon-back'
    optional: true
- tapOn: ${output.wording.search.tabBar}
- tapOn: ${output.wording.search.tabBar} # Permet de réinitialiser l'état de la page Recherche
