appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible: ${output.wording.common.browserUpdate}
    commands:
    - tapOn: ${output.wording.common.browserUpdate}
- runFlow:
    when:
      visible: ${output.wording.common.ios.permissionRegex}
      platform: iOS
    commands:
    - tapOn: ${output.wording.common.ios.allow}
- assertVisible: ${output.wording.cookies.consent.title}
- tapOn: ${output.wording.cookies.consent.acceptAll}
- tapOn: 
    text: ${output.wording.common.ios.allow}
    optional: true
